updated inventory and main

--- a/main.yml
+++ b/main.yml
@@ -1,42 +1,40 @@
 ---
 - hosts: all
-  remote_user: root
-  become: true
-  become_method: sudo
   roles:
     - base
 
-- hosts: plex
-  remote_user: root
-  become: true
-  become_method: sudo
-  roles:
-    - plex
-
-- hosts: sonarr
-  remote_user: root
-  become: true
-  become_method: sudo
-  roles:
-    - sonarr
-
-- hosts: nzb
-  remote_user: root
-  become: true
-  become_method: sudo
-  roles:
-    - nzb
-
-- hosts: radarr
-  remote_user: root
-  become: true
-  become_method: sudo
-  roles:
-    - radarr
-    
-- hosts: tautulli
-  remote_user: root
-  become: true
-  become_method: sudo
-  roles:
-    - tautulli
+#- hosts: plex
+#  remote_user: root
+#  become: true
+#  become_method: sudo
+#  roles:
+#    - plex
+#
+#- hosts: sonarr
+#  remote_user: root
+#  become: true
+#  become_method: sudo
+#  roles:
+#    - sonarr
+#
+#- hosts: nzb
+#  remote_user: root
+#  become: true
+#  become_method: sudo
+#  roles:
+#    - nzb
+#
+#- hosts: radarr
+#  remote_user: root
+#  become: true
+#  become_method: sudo
+#  roles:
+#    - radarr
+#    
+#- hosts: tautulli
+#  remote_user: root
+#  become: true
+#  become_method: sudo
+#  roles:
+#    - tautulli
+#
