--- a/hosts.yml
+++ b/hosts.yml
@@ -1,27 +1,27 @@
-nzb:
-  hosts:
-    nzb.snyderfamily.int
-  
-radarr:
-  hosts:
-    radarr.snyderfamily.int
-
-sonarr:
-  hosts:
-    sonarr.snyderfamily.int
-
-plex:
-  hosts:
-    plex.snyderfamily.int
-
-dns:
-  hosts:
-    ns01.snyderfamily.int
-    ns02.snyderfamily.int
-
-directory:
-  hosts:
-    idm.snyderfamily.int
+#nzb:
+#  hosts:
+#    nzb.snyderfamily.int
+#  
+#radarr:
+#  hosts:
+#    radarr.snyderfamily.int
+#
+#sonarr:
+#  hosts:
+#    sonarr.snyderfamily.int
+#
+#plex:
+#  hosts:
+#    plex.snyderfamily.int
+#
+#dns:
+#  hosts:
+#    ns01.snyderfamily.int
+#    ns02.snyderfamily.int
+#
+#directory:
+#  hosts:
+#    idm.snyderfamily.int
 
 awx:
   ansible_connection: local
@@ -35,9 +35,3 @@ media:
     sonarr:
     plex:
 
-base:
-  children:
-    media:
-    dns:
-    directory:
-    awx:
