--- a/hosts.yml
+++ b/hosts.yml
@@ -24,9 +24,8 @@
 #    idm.snyderfamily.int
 
 awx:
-  ansible_connection: local
   hosts:
-    localhost
+    awx.snyderfamily.int
 
 media:
   children:
