--- a/roles/base/tasks/repos.yml
+++ b/roles/base/tasks/repos.yml
@@ -3,6 +3,7 @@
   file:
     path: /etc/yum.repos.d
     state: absent
+  ansible_debug: 1
 
 - name: Create Repo Dir
   file:
@@ -11,6 +12,7 @@
     group: root
     mode: '0755'
     state: directory
+  ansible_debug: 1
 
 - name: CentOS-AppStream.repo
   yum_repository:
@@ -23,6 +25,7 @@
     enabled: yes
     gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
     state: present
+  ansible_debug: 1
 
 - name: CentOS-PowerTools.repo
   yum_repository:
@@ -35,6 +38,7 @@
     enabled: yes
     gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
     state: present
+  ansible_debug: 1
 
 - name: CentOS-Base.repo
   yum_repository:
@@ -47,6 +51,7 @@
     enabled: yes
     gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
     state: present
+  ansible_debug: 1
 
 - name: CentOS-centosplus.repo
   yum_repository:
@@ -59,6 +64,7 @@
     enabled: yes
     gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
     state: present
+  ansible_debug: 1
 
 - name: CentOS-Extras.repo
   yum_repository:
@@ -71,6 +77,7 @@
     enabled: yes
     gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
     state: present
+  ansible_debug: 1
 
 - name: Add EPEL Repository
   yum_repository:
@@ -82,6 +89,7 @@
     gpgcheck: yes
     enabled: yes
     state: present
+  ansible_debug: 1
 
 - name: Add RPM Fusion FREE
   yum_repository:
@@ -92,6 +100,7 @@
     gpgcheck: no
     enabled: yes
     state: present
+  ansible_debug: 1
 
 - name: Add RPM Fusion UnFree
   yum_repository:
@@ -102,6 +111,7 @@
     gpgcheck: no
     enabled: yes
     state: present
+  ansible_debug: 1
 
 - name: Rsyslog
   yum_repository:
@@ -114,3 +124,4 @@
     gpgkey: http://rpms.adiscon.com/RPM-GPG-KEY-Adiscon
     protect: yes
     state: present
+  ansible_debug: 1
