--- a/ansible.cfg
+++ b/ansible.cfg
@@ -70,7 +70,7 @@ interpreter_python = /usr/bin/python3
 #roles_path    = /etc/ansible/roles
 
 # uncomment this to disable SSH key host checking
-#host_key_checking = False
+host_key_checking = False
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 #stdout_callback = skippy
@@ -102,7 +102,7 @@ interpreter_python = /usr/bin/python3
 #sudo_flags = -H -S -n
 
 # SSH timeout
-#timeout = 10
+timeout = 10
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
@@ -110,7 +110,7 @@ remote_user = root
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
-#log_path = /var/log/ansible.log
+log_path = /var/log/ansible.log
 
 # default module name for /usr/bin/ansible
 #module_name = command
@@ -163,7 +163,7 @@ private_key_file = /root/.ssh/ansible
 # stdout from ansible-playbook (or you have manually specified no_log in your
 # playbook on all of the tasks where you have secret information) then you can
 # safely set this to True to get more informative messages.
-#display_args_to_stdout = False
+display_args_to_stdout = True
 
 # by default (as of 1.3), Ansible will raise errors when attempting to dereference
 # Jinja2 variables that are not set in templates or action lines. Uncomment this line
@@ -406,7 +406,7 @@ private_key_file = /root/.ssh/ansible
 #   * smart = try sftp and then try scp [default]
 #   * True = use scp only
 #   * False = use sftp only
-#scp_if_ssh = smart
+scp_if_ssh = True
 
 # Control the mechanism for transferring files (new)
 # If set, this will override the scp_if_ssh option
@@ -423,7 +423,7 @@ private_key_file = /root/.ssh/ansible
 
 # The -tt argument is passed to ssh when pipelining is not enabled because sudo 
 # requires a tty by default. 
-#usetty = True
+usetty = True
 
 # Number of times to retry an SSH connection to a host, in case of UNREACHABLE.
 # For each retry attempt, there is an exponential backoff,
@@ -469,19 +469,19 @@ private_key_file = /root/.ssh/ansible
 #libvirt_lxc_noseclabel = yes
 
 [colors]
-#highlight = white
-#verbose = blue
-#warn = bright purple
-#error = red
-#debug = dark gray
-#deprecate = purple
-#skip = cyan
-#unreachable = red
-#ok = green
-#changed = yellow
-#diff_add = green
-#diff_remove = red
-#diff_lines = cyan
+highlight = white
+verbose = blue
+warn = bright purple
+error = red
+debug = dark gray
+deprecate = purple
+skip = cyan
+unreachable = red
+ok = green
+changed = yellow
+diff_add = green
+diff_remove = red
+diff_lines = cyan
 
 
 [diff]
