uncommented the media group

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,19 +1,19 @@
-#nzb:
-#  hosts:
-#    nzb.snyderfamily.int
-#  
-#radarr:
-#  hosts:
-#    radarr.snyderfamily.int
-#
-#sonarr:
-#  hosts:
-#    sonarr.snyderfamily.int
-#
-#plex:
-#  hosts:
-#    plex.snyderfamily.int
-#
+nzb:
+  hosts:
+    nzb.snyderfamily.int
+  
+radarr:
+  hosts:
+    radarr.snyderfamily.int
+
+sonarr:
+  hosts:
+    sonarr.snyderfamily.int
+
+plex:
+  hosts:
+    plex.snyderfamily.int
+
 #dns:
 #  hosts:
 #    ns01.snyderfamily.int
