Added template /etc/hosts file

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -14,6 +14,10 @@ plex:
   hosts:
     plex.snyderfamily.int
 
+tautulli:
+  hosts:
+    tautulli.snyderfamily.int
+
 #dns:
 #  hosts:
 #    ns01.snyderfamily.int
