--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -18,6 +18,10 @@ tautulli:
   hosts:
     tautulli.snyderfamily.int
 
+transmission:
+  hosts:
+    transmission.snyderfamily.int
+
 #dns:
 #  hosts:
 #    ns01.snyderfamily.int
@@ -37,4 +41,6 @@ media:
     radarr:
     sonarr:
     plex:
+    tautulli:
+    transmission:
 
