--- a/roles/plex/tasks/main.yml
+++ b/roles/plex/tasks/main.yml
@@ -3,6 +3,46 @@
   hostname:
     name: plex
 
+- name: Create Media Group on all Media Servers
+  group:
+    name: media
+    gid: 3000
+    state: present
+    system: yes
+
+- name: Create OPT APPS directory on all Media Servers
+  file:
+    path: /opt/apps
+    state: directory
+    group: media
+    owner: root
+    mode: '770'
+
+- name: Create the Plex user
+  user:
+    name: plex
+    home: /opt/apps/plex
+    create_home: yes
+    move_home: yes
+    group: media
+    state: present
+
+- name: Create OPT APPS MEDIA directory on all Media Servers
+  file:
+    path: /opt/apps/media
+    state: directory
+    group: media
+    owner: root
+    mode: '770'
+
+- name: Mount NFS location on all Media Servers
+  ansible.posix.mount:
+    src: wickednas.snyderfamily.int:/plex
+    path: /opt/apps/media
+    fstype: nfs
+    opts: defaults,rw
+    state: mounted
+
 - name: Import the Plex Repo
   yum_repository:
     name: "PlexRepo"
