--- a/roles/base/tasks/repos.yml
+++ b/roles/base/tasks/repos.yml
@@ -17,11 +17,10 @@
     file: CentOS-AppStream
     name: AppStream
     description: Appstream
-    mirrorlist: http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=AppStream&infra=$infra
-    baseurl: http://mirror.centos.org/$contentdir/$releasever/AppStream/$basearch/os/
+    baseurl: https://mirror.arizona.edu/centos/8/AppStream/x86_64/os/
     gpgcheck: yes
     enabled: yes
-    gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
+    gpgkey: https://mirror.arizona.edu/centos/RPM-GPG-KEY-CentOS-Official
     state: present
 
 - name: CentOS-PowerTools.repo
@@ -29,11 +28,10 @@
     file: CentOS-PowerTools
     name: PowerTools
     description: PowerTools
-    mirrorlist: http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=PowerTools&infra=$infra
-    baseurl: http://mirror.centos.org/$contentdir/$releasever/PowerTools/$basearch/os/
+    baseurl: https://mirror.arizona.edu/centos/8/PowerTools/x86_64/os/
     gpgcheck: yes
     enabled: yes
-    gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
+    gpgkey: https://mirror.arizona.edu/centos/RPM-GPG-KEY-CentOS-Official
     state: present
 
 - name: CentOS-Base.repo
@@ -41,11 +39,10 @@
     file: CentOS-Base
     name: BaseOS
     description: BaseOS
-    mirrorlist: http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=BaseOS&infra=$infra
-    baseurl: http://mirror.centos.org/$contentdir/$releasever/BaseOS/$basearch/os/
+    baseurl: https://mirror.arizona.edu/centos/8/BaseOS/x86_64/os/
     gpgcheck: yes
     enabled: yes
-    gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
+    gpgkey: https://mirror.arizona.edu/centos/RPM-GPG-KEY-CentOS-Official
     state: present
 
 - name: CentOS-centosplus.repo
@@ -53,11 +50,10 @@
     file: CentOS-centosplus
     name: centosplus
     description: centosplus
-    mirrorlist: http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=centosplus&infra=$infra
-    baseurl: http://mirror.centos.org/$contentdir/$releasever/centosplus/$basearch/os/
+    baseurl: https://mirror.arizona.edu/centos/8/centosplus/x86_64/os/
     gpgcheck: yes
     enabled: yes
-    gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
+    gpgkey: https://mirror.arizona.edu/centos/RPM-GPG-KEY-CentOS-Official
     state: present
 
 - name: CentOS-Extras.repo
@@ -65,11 +61,10 @@
     file: CentOS-Extras
     name: extras
     description: extras
-    mirrorlist: http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=extras&infra=$infra
-    baseurl: http://mirror.centos.org/$contentdir/$releasever/extras/$basearch/os/
+    baseurl: https://mirror.arizona.edu/centos/8/extras/x86_64/os/
     gpgcheck: yes
     enabled: yes
-    gpgkey: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
+    gpgkey: https://mirror.arizona.edu/centos/RPM-GPG-KEY-CentOS-Official
     state: present
 
 - name: Add EPEL Repository
