--- a/roles/radarr/tasks/main.yml
+++ b/roles/radarr/tasks/main.yml
@@ -2,6 +2,15 @@
 - name: Set a hostname
   hostname:
     name: radarr
+
+- name: Setup /etc/hosts file
+  ansible.posix.synchronize:
+    checksum: yes
+    src: hosts
+    dest: /etc/hosts
+    owner: yes
+    group: yes
+
 - name: Create Media Group on all Media Servers
   group:
     name: media
