--- a/roles/tautulli/tasks/main.yml
+++ b/roles/tautulli/tasks/main.yml
@@ -3,6 +3,14 @@
   hostname:
     name: tautulli
 
+- name: Setup /etc/hosts file
+  ansible.posix.synchronize:
+    checksum: yes
+    src: hosts
+    dest: /etc/hosts
+    owner: yes
+    group: yes
+
 - name: Create Media Group on all Media Servers
   group:
     name: media
