Added a password for all user accounts

--- a/roles/radarr/tasks/main.yml
+++ b/roles/radarr/tasks/main.yml
@@ -32,6 +32,7 @@
     home: /opt/apps/radarr
     create_home: yes
     move_home: yes
+    password: "$6$13EsWp/t8Y4T0/xH$m2I7DWDjcodxFTHAZIad1lZSers0XREz1dHkHzckd5TLPxJ5Wipv32gD4236M2BSIc.SE/.6kEc89fyEj/e.00"
     group: media
     state: present
 
