Updated Plex role override umask

--- a/roles/plex/files/override.conf
+++ b/roles/plex/files/override.conf
@@ -12,4 +12,4 @@ User=plex
 Group=media
 #
 # This is needed to change the default umask     
-UMask=0002    # this must be octal    - See warning below
+umask=0002    # this must be octal    - See warning below
