--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,9 +1,16 @@
 ---
+- name: Find Gnome Folder
+  stat:
+    path: /etc/xdg/autostart/gnome-initial-setup-first-login.desktop
+    follow: no
+  register: gnome-setup
+
 - name: Disable GNOME Initial Setup
   lineinfile:
-      path: /etc/xdg/autostart/gnome-initial-setup-first-login.desktop
-      line: "X-GNOME-Autostart-enabled=false"
-      state: present
+    path: /etc/xdg/autostart/gnome-initial-setup-first-login.desktop
+    line: "X-GNOME-Autostart-enabled=false"
+    state: present
+  when: gnome-setup.stat.exists
       
 - name: Setup Repositories
   import_tasks: repos.yml
