--- a/roles/tautulli/tasks/main.yml
+++ b/roles/tautulli/tasks/main.yml
@@ -36,18 +36,28 @@
     group: media
     state: present
 
-- name: Create OPT APPS MEDIA directory on all Media Servers
-  file:
-    path: /opt/apps/media
-    state: directory
-    group: media
-    owner: root
-    mode: '770'
+- name: Install Tautulli
+  git:
+    repo: https://github.com/Tautulli/Tautulli.git
+    clone: yes
+    dest: /opt/apps/tautulli
 
-- name: Mount NFS location on all Media Servers
-  ansible.posix.mount:
-    src: wickednas.snyderfamily.int:/plex
-    path: /opt/apps/media
-    fstype: nfs
-    opts: defaults,rw
-    state: mounted
+- name: Copy systemd service file
+  ansible.posix.synchronize:
+    checksum: yes
+    src: tautulli.service
+    dest: /lib/systemd/system/tautulli.service
+    owner: yes
+    group: yes
+  register: systemd
+
+- name: Reload systemd
+  systemd:
+    daemon_reload: yes
+  when: systemd.changed
+
+- name: Enable and Start Tautulli
+  systemd:
+    name: tautulli
+    enabled: yes
+    state: started
