--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -3,14 +3,14 @@
   stat:
     path: /etc/xdg/autostart/gnome-initial-setup-first-login.desktop
     follow: no
-  register: gnome-setup
+  register: p
 
 - name: Disable GNOME Initial Setup
   lineinfile:
     path: /etc/xdg/autostart/gnome-initial-setup-first-login.desktop
     line: "X-GNOME-Autostart-enabled=false"
     state: present
-  when: gnome-setup.stat.exists
+  when: p.stat.exists
       
 - name: Setup Repositories
   import_tasks: repos.yml
