Updated to install python3-cheetah, instead of from pip

--- a/roles/nzb/tasks/main.yml
+++ b/roles/nzb/tasks/main.yml
@@ -62,6 +62,7 @@
     sab_tools:
       - par2cmdline
       - unrar
+      - python3-cheetah
   dnf:
     name: "{{ sab_tools }}"
     state: latest
@@ -69,11 +70,6 @@
 - name: Install SabEnc
   pip:
     name: sabyenc3
-    state: latest
-
-- name: Install Cheetah
-  pip:
-    name: Cheetah
     state: latest
 
 - name: Install SabNZB
