--- a/roles/radarr/tasks/main.yml
+++ b/roles/radarr/tasks/main.yml
@@ -44,10 +44,26 @@
     owner: root
     mode: '770'
 
+- name: Create OPT APPS NZBAPPDATA directory on all Media Servers
+  file:
+    path: /opt/apps/nzb_appdata
+    state: directory
+    group: media
+    owner: root
+    mode: '770'
+
 - name: Mount NFS location on all Media Servers
   ansible.posix.mount:
     src: wickednas.snyderfamily.int:/plex
     path: /opt/apps/media
+    fstype: nfs
+    opts: defaults,rw
+    state: mounted
+
+- name: Mount NFS location on all Media Servers
+  ansible.posix.mount:
+    src: wickednas.snyderfamily.int:/nzb_appdata
+    path: /opt/apps/nzb_appdata
     fstype: nfs
     opts: defaults,rw
     state: mounted
