--- a/roles/transmission/tasks/main.yml
+++ b/roles/transmission/tasks/main.yml
@@ -35,3 +35,48 @@
     password: "$6$13EsWp/t8Y4T0/xH$m2I7DWDjcodxFTHAZIad1lZSers0XREz1dHkHzckd5TLPxJ5Wipv32gD4236M2BSIc.SE/.6kEc89fyEj/e.00"
     group: media
     state: present
+
+- name: Create OPT APPS NZBAPPDATA directory on all Media Servers
+  file:
+    path: /opt/apps/nzb_appdata
+    state: directory
+    group: media
+    owner: root
+    mode: '770'
+
+- name: Mount NFS location on all Media Servers
+  ansible.posix.mount:
+    src: wickednas.snyderfamily.int:/nzb_appdata
+    path: /opt/apps/nzb_appdata
+    fstype: nfs
+    opts: defaults,rw
+    state: mounted
+
+- name: Install Transmission
+  vars:
+    trans_apps:
+      - transmission-gtk
+      - transmission-daemon
+  dnf:
+    name: "{{ trans_apps }}"
+    state: latest
+
+- name: Copy systemd service file
+  ansible.posix.synchronize:
+    checksum: yes
+    src: transmission-daemon.service
+    dest: /usr/lib/systemd/system/transmission-daemon.service
+    owner: yes
+    group: yes
+  register: systemd
+
+- name: Reload systemd
+  systemd:
+    daemon_reload: yes
+  when: systemd.changed
+
+- name: Enable and Start Transmission Daemon
+  systemd:
+    name: transmission-daemon
+    enabled: yes
+    state: started
