--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,35 +1,39 @@
 nzb:
   hosts:
-    sabnzb.snyderfamily.int
+    sabnzb.int.snyderfamily.co
   
 radarr:
   hosts:
-    radarr.snyderfamily.int
+    radarr.int.snyderfamily.co
 
 sonarr:
   hosts:
-    sonarr.snyderfamily.int
+    sonarr.int.snyderfamily.co
 
 plex:
   hosts:
-    plex.snyderfamily.int
+    plex.int.snyderfamily.co
 
 tautulli:
   hosts:
-    tautulli.snyderfamily.int
+    tautulli.int.snyderfamily.co
 
 transmission:
   hosts:
-    transmission.snyderfamily.int
+    transmission.int.snyderfamily.co
+
+jackett:
+  hosts:
+    jackett.int.snyderfamily.co
 
 #dns:
 #  hosts:
-#    ns01.snyderfamily.int
-#    ns02.snyderfamily.int
+#    ns01.int.snyderfamily.co
+#    ns02.int.snyderfamily.co
 #
 #directory:
 #  hosts:
-#    idm.snyderfamily.int
+#    idm.int.snyderfamily.co
 
 awx:
   hosts:
