--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -69,6 +69,9 @@
     state: latest
     update_cache: yes
 
+- name: Setup Users
+  import_tasks: users.yml
+
 - name: Set Swappiness
   sysctl:
     name: vm.swappiness
